lessions/44-cafe-shop-tea-coffee/.kube/ns.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: cafe-shop
  labels: 
    stage: DEV
    author: anton.kovach
