lessions/44-cafe-shop-tea-coffee/.kube/coffee-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-deployment
  labels:
    app: coffee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee
  template:
    metadata:
      labels:
        app: coffee
    spec:
      containers:
      - name: coffee
        image: openshift/hello-openshift
        ports:
        - containerPort: 80
