lessions/44-cafe-shop-tea-coffee/.kube/cola-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cola-deployment
  labels:
    app: cola
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cola
  template:
    metadata:
      labels:
        app: cola
    spec:
      containers:
      - name: cola
        image: openshift/hello-openshift
        ports:
        - containerPort: 80
