lessions/44-cafe-shop-tea-coffee/.kube/tea-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tea-deployment
  labels:
    app: tea
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tea
  template:
    metadata:
      labels:
        app: tea
    spec:
      containers:
      - name: tea
        image: openshift/hello-openshift
        ports:
        - containerPort: 80
