lessions/44-cafe-shop-tea-coffee/.kube/cola-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cola-svc
  labels:
    app: cola
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cola
