lessions/44-cafe-shop-tea-coffee/.kube/cafe-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shop.192.168.99.108.xip.io
#  annotations:
#    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: shop.192.168.99.108.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: cola-svc
          servicePort: 80
      - path: /tea
        backend:
          serviceName: tea-svc
          servicePort: 80
      - path: /coffee
        backend:
          serviceName: coffee-svc
          servicePort: 80
      - path: /cola
        backend:
          serviceName: cola-svc
          servicePort: 80
  tls:
  - hosts:
    - shop.192.168.99.108.xip.io
#    secretName: netlock-classb
